--- a/frontend/src/Pages/EmailVerification/EmailVerification.css
+++ b/frontend/src/Pages/EmailVerification/EmailVerification.css
@@ -92,9 +92,9 @@ form {
     margin-top: 1rem;
 }
 
-.inner>.btn-primary.disabled,
-.btn-primary:disabled,
-.btn-primary {
+.inner .btn-primary.disabled,
+.inner .btn-primary:disabled,
+.inner .btn-primary {
     color: hsla(0, 0%, 100%, 0.8);
     background-color: #2ea44f;
     border-color: rgba(27, 31, 35, 0.1);
