--- a/frontend/src/Pages/Login/Login.module2.css
+++ b/frontend/src/Pages/Login/Login.module2.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
 }
 
-body {
+.OverallContainer {
     min-height: 100vh;
     display: flex;
     font-weight: 400;
@@ -15,7 +15,7 @@ body {
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-body,
+.OverallContainer,
 html,
 .App,
 #root,
