--- a/frontend/src/Pages/Login/Login.module2.css
+++ b/frontend/src/Pages/Login/Login.module2.css
@@ -24,16 +24,21 @@ html,
     height: 100%;
 }
 
-.navbar-light {
-    background-color: #ffffff;
-    box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
-}
-
 .outer {
     display: flex;
     justify-content: center;
     flex-direction: column;
     text-align: left;
+}
+
+.vertical-center {
+    min-height: 100%;
+    /* Fallback for browsers do NOT support vh unit */
+    min-height: 100vh;
+    /* These two lines are counted as one :-)       */
+
+    display: flex;
+    align-items: center;
 }
 
 .inner {
